src/components/SelectDropDown/SelectDropdown.scss
$primary-color: #3359DB;
$border-color: #D4D4D4;

@mixin itemsFontStyle($fontColor:$primary-color) {
  color: $fontColor;
  font-family: "DIN Pro Medium";
  font-size: 15px;
  font-weight: 500;
  line-height: 20px;
  text-align: center;
}
.mdl-layout__container .center-dropdown{
  width: 160px !important;
  margin: 0 10px 40px !important;
}

.dropdown {
  &__container {
    width: 100%;
    height: 30px;
    &.open > div.dropdown__input {
      border: 1px solid $primary-color;
      
    }
    &.open > div.dropdown__list {
      transform: scale(1,1)
    }
  }

  &__input {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 10px 0 15px;
    align-items: center;
    width: 100%;
    cursor: pointer;
    border: 1px solid $border-color;
    min-height: 36px;
    border-radius: 2px;
    background-color: #FFFFFF;
    
    &:hover,
    &:active {
      border: 1px solid $primary-color;
    }

    &__value {
      @include itemsFontStyle;
      margin-right: 7px;
    }
  }

  &__list {
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 100;
    width: 160px;
    margin-top: 3px;
    transform: scaleY(0);
    transition: all 0.3s ease;
    position: absolute;
    transform-origin: 50% 0;
    border: 1px solid $border-color;
    border-radius: 0 0 2px 2px;
    background-color: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
    
    &__items {
      box-sizing: border-box;
      width: 100%;
      list-style-type: none;
      margin: 0;
      z-index:2;
      padding: 0;
      cursor:pointer;
      text-align: left;
      background:white;
    }
    &__item {
      @include itemsFontStyle(#4F4F4F);
      box-sizing: border-box;
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      padding-left: 15px;
      width: 100%;
      height: 32px;
      &.selected {
        color: $primary-color;
      }
      &:hover {
        color: #3359DB;
        background: #F8F8F8;
      }
    }
  }
}

